--- a/.github/workflows/cpp-sdk-cluster-test.yaml
+++ b/.github/workflows/cpp-sdk-cluster-test.yaml
@@ -1,4 +1,4 @@
-name: Cpp SDK Test
+name: Cpp SDK Cluster Test
 
 on:
   push:
@@ -14,7 +14,7 @@ env:
   HYBRIDSE_SOURCE: download
 
 jobs:
-  sql_sdk_test:
+  sql_cluster_test:
     runs-on: ubuntu-latest
     container:
       image: ghcr.io/4paradigm/hybridsql:0.4.0
@@ -22,21 +22,22 @@ jobs:
       - uses: actions/checkout@v1
       - name: build
         run: |
-          echo "sql_sdk_test build ... "
+          echo "build sql_cluster_test"
 #          bash steps/init_env.sh ${{ env.HYBRIDSE_SOURCE }}
 #          mkdir -p build
-#          source /root/.bashrc && cd build && cmake -DSQL_PYSDK_ENABLE=OFF -DSQL_JAVASDK_ENABLE=OFF -DTESTING_ENABLE=ON .. && make -j$(nproc) sql_sdk_test && cd ../
+#          source /root/.bashrc && cd build && cmake -DSQL_PYSDK_ENABLE=OFF -DSQL_JAVASDK_ENABLE=OFF -DTESTING_ENABLE=ON .. && make -j$(nproc) sql_cluster_test && cd ../
 #      - name: run sql_sdk_test
 #        run: |
-#          bash steps/ut.sh sql_sdk_test 0
+#          bash steps/ut.sh sql_cluster_test 0
 #      - name: upload unit test results
 #        if: always()
 #        uses: actions/upload-artifact@v2
 #        with:
-#          name: linux-ut-result-cpp-sdk-${{ github.sha }}
+#          name: linux-ut-result-cpp-cluster-${{ github.sha }}
 #          path: |
 #            reports/*.xml
-#
+
+
 #  publish-test-results:
 #    runs-on: ubuntu-latest
 #    needs: ["sql_cluster_test"]
@@ -54,5 +55,5 @@ jobs:
 #        uses: EnricoMi/publish-unit-test-result-action@v1
 #        with:
 #          files: linux-ut-result-*/**/*.xml
-#          check_name: Linux Cpp SDK Test Report
-#          comment_title: Linux Cpp SDK Test Report
+#          check_name: Linux Cpp SDK Cluster Test Report
+#          comment_title: Linux Cpp SDK Cluster Test Report
