--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -3,7 +3,8 @@ name: deploy
 on:
   # the action will only run on workflows completed
   workflow_run:
-    workflows: [ "OpenMLDB Build and Test", "Cpp SDK Test", "Cpp SDK Cluster Test", "Java and Python SDK Test" ]
+#    workflows: [ "OpenMLDB Build and Test", "Cpp SDK Test", "Cpp SDK Cluster Test", "Java and Python SDK Test" ]
+    workflows: ["OpenMLDB Build and Test"]
     types:
       - completed
 env:
