test: add rtidb-unsupport mode for between predicates

--- a/cases/function/expression/test_predicate.yaml
+++ b/cases/function/expression/test_predicate.yaml
@@ -370,6 +370,7 @@ cases:
 
   - id: between_predicate_1
     desc: between predicate, numberic between
+    mode: rtidb-unsupport
     inputs:
       - columns: [ "id bigint", "name string", "code string", "ctime bigint", "cdate date" ]
         indexs: [ "index1:id:ctime" ]
@@ -393,6 +394,7 @@ cases:
         - [2, Zoey, 100]
   - id: between_predicate_2
     desc: between predicate, string between
+    mode: rtidb-unsupport
     inputs:
       - columns: [ "id bigint", "name string", "code string", "ctime timestamp", "cdate date" ]
         indexs: [ "index1:id:ctime" ]
@@ -416,6 +418,7 @@ cases:
         - [2, Zoey, NULL]
   - id: between_predicate_3
     desc: between predicate, timestamp between
+    mode: rtidb-unsupport
     inputs:
       - columns: [ "id bigint", "name string", "code string", "ctime timestamp", "cdate date" ]
         indexs: [ "index1:id:ctime" ]
@@ -440,6 +443,7 @@ cases:
         - [2, Zoey, NULL]
   - id: between_predicate_4
     desc: between predicate with aggregation function
+    mode: rtidb-unsupport
     sql: |
       SELECT id, col1, std_ts,
       sum(id) OVER w1 BETWEEN 2 AND 6 as w1_id
