--- a/.github/workflows/openmldb-deploy.yml
+++ b/.github/workflows/openmldb-deploy.yml
@@ -1,9 +1,8 @@
-name: deploy
+name: OpenMLDB Deploy
 
 on:
   # the action will only run on workflows completed
   workflow_run:
-#    workflows: [ "OpenMLDB Build and Test", "Cpp SDK Test", "Cpp SDK Cluster Test", "Java and Python SDK Test" ]
     workflows: ["build-and-test"]
     types:
       - completed
