--- a/cases/function/expression/test_predicate.yaml
+++ b/cases/function/expression/test_predicate.yaml
@@ -370,7 +370,7 @@ cases:
 
   - id: between_predicate_1
     desc: between predicate, numberic between
-    mode: rtidb-unsupport
+    mode: hybridse-only
     inputs:
       - columns: [ "id bigint", "name string", "code string", "ctime bigint", "cdate date" ]
         indexs: [ "index1:id:ctime" ]
@@ -394,13 +394,13 @@ cases:
         - [2, Zoey, 100]
   - id: between_predicate_2
     desc: between predicate, string between
-    mode: rtidb-unsupport
+    mode: hybridse-only
     inputs:
       - columns: [ "id bigint", "name string", "code string", "ctime timestamp", "cdate date" ]
         indexs: [ "index1:id:ctime" ]
         rows:
-          - [1, Lucy,  A, 1609459201000, 2021-1-1]
-          - [2, Zoey,  B, 1609545841000, 2021-1-2]
+          - [1, Lucy,  ABC, 1609459201000, 2021-1-1]
+          - [2, Zoey,  BBC, 1609545841000, 2021-1-2]
       - columns: [ "id bigint", "std_ts bigint", "score int" ]
         indexs: ["index1:id:std_ts"]
         rows:
@@ -410,15 +410,15 @@ cases:
           - [4, 1609459204000, 30]
           - [5, 1609459205000, 50]
     sql: |
-      SELECT {0}.id, {0}.name, {1}.score FROM {0} LAST JOIN {1} ORDER BY {1}.std_ts ON {0}.id = {1}.id AND {0}.code NOT BETWEEN 'B' AND 'C';
+      SELECT {0}.id, {0}.name, {0}.code, {1}.score FROM {0} LAST JOIN {1} ORDER BY {1}.std_ts ON {0}.id = {1}.id AND {0}.code NOT BETWEEN 'BBB' AND 'CCC';
     expect:
-      columns: ["id bigint", "name string", "score int"]
+      columns: ["id bigint", "name string", "code string", "score int"]
       rows:
-        - [1, Lucy, 10]
-        - [2, Zoey, NULL]
+        - [1, Lucy, ABC, 10]
+        - [2, Zoey, BBC, NULL]
   - id: between_predicate_3
     desc: between predicate, timestamp between
-    mode: rtidb-unsupport
+    mode: hybridse-only
     inputs:
       - columns: [ "id bigint", "name string", "code string", "ctime timestamp", "cdate date" ]
         indexs: [ "index1:id:ctime" ]
@@ -443,7 +443,7 @@ cases:
         - [2, Zoey, NULL]
   - id: between_predicate_4
     desc: between predicate with aggregation function
-    mode: rtidb-unsupport
+    mode: hybridse-only
     sql: |
       SELECT id, col1, std_ts,
       sum(id) OVER w1 BETWEEN 2 AND 6 as w1_id
