--- a/java/openmldb-nearline-tablet/src/main/resources/openmldb-tablet.properties
+++ b/java/openmldb-nearline-tablet/src/main/resources/openmldb-tablet.properties
@@ -6,3 +6,5 @@ server.io_threads=4
 zookeeper.cluster=172.24.4.55:12200
 zookeeper.root_path=/openmldb
 zookeeper.session_timeout=5000
+
+iceberg.hdfs.path=hdfs://172.24.4.40:9000/dl_test
