--- a/java/openmldb-nearline-tablet/src/main/resources/openmldb-tablet.properties
+++ b/java/openmldb-nearline-tablet/src/main/resources/openmldb-tablet.properties
@@ -1,4 +1,4 @@
-server.host=127.0.0.1
+server.host=10.100.116.177
 server.port=8123
 server.worker_threads=4
 server.io_threads=4
@@ -7,4 +7,5 @@ zookeeper.cluster=172.24.4.55:12200
 zookeeper.root_path=/openmldb
 zookeeper.session_timeout=5000
 
-iceberg.hdfs.path=hdfs://172.24.4.40:9000/dl_test
+#iceberg.hdfs.path=hdfs://172.24.4.40:9000/dl_test
+iceberg.hdfs.path=file:///tmp/hadoop
