--- a/java/pom.xml
+++ b/java/pom.xml
@@ -8,7 +8,7 @@
     <packaging>pom</packaging>
     <name>openmldb</name>
     <!-- Use the version from different profile -->
-    <version>0.2.1-SNAPSHOT</version>
+    <version>0.3.0</version>
     <modules>
         <module>openmldb-jdbc</module>
         <module>openmldb-native</module>
