--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -21,7 +21,7 @@ jobs:
     env:
       OS: linux
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v2
       - name: build
         run: |
           bash steps/init_env.sh ${{ env.HYBRIDSE_SOURCE }}
@@ -63,7 +63,7 @@ jobs:
     container:
       image: ghcr.io/4paradigm/hybridsql:0.4.0
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v2
       - name: build
         run: |
           bash steps/init_env.sh ${{ env.HYBRIDSE_SOURCE }}
@@ -85,7 +85,7 @@ jobs:
     container:
       image: ghcr.io/4paradigm/hybridsql:0.4.0
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v2
       - name: build
         run: |
           bash steps/init_env.sh ${{ env.HYBRIDSE_SOURCE }}
@@ -138,7 +138,7 @@ jobs:
     container:
       image: ghcr.io/4paradigm/hybridsql:0.4.0
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v2
       - name: build pysdk and sqlalchemy
         run: |
           bash steps/init_env.sh ${{ env.HYBRIDSE_SOURCE }}
@@ -210,7 +210,7 @@ jobs:
     container:
       image: ghcr.io/4paradigm/hybridsql:0.4.0
     if: >
-      success() && startsWith(github.ref, 'refs/tags/v')
+      success() && github.event_name == 'push'
     steps:
       - uses: actions/checkout@v2
 
@@ -233,8 +233,8 @@ jobs:
         run: |
           bash steps/init_env.sh ${{ env.HYBRIDSE_SOURCE }}
           VERSION=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,')
-          VERSION=$(echo $VERSION | sed -e 's/^v//')
-          sh steps/package_openmldb_javasdk.sh $VERSION
+          VERSION=$(echo "$VERSION" | sed -e 's/^v//')
+          ./steps/package_openmldb_javasdk.sh "$VERSION"
         env:
           MAVEN_OPTS: -Duser.home=/github/home
           MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
