feat: add codec

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -20,6 +20,7 @@ add_custom_command(OUTPUT ${project_dir}/src/proto/${proto_name}.pb.cc
         --cpp_out=${project_dir}/src/proto/
         --java_out=${project_dir}/java/openmldb-nearline-tablet/src/main/java
         --java_out=${project_dir}/java/openmldb-import/src/main/java
+        --java_out=${project_dir}/java/openmldb-common/src/main/java
         ${project_dir}/src/proto/${proto_name}.proto
         DEPENDS ${project_dir}/src/proto/${proto_name}.proto
         )
