--- a/java/openmldb-nearline-tablet/pom.xml
+++ b/java/openmldb-nearline-tablet/pom.xml
@@ -2,6 +2,11 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
+    <parent>
+        <artifactId>openmldb-parent</artifactId>
+        <groupId>com.4paradigm.openmldb</groupId>
+        <version>0.2.3</version>
+    </parent>
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.4paradigm.openmldb</groupId>
     <artifactId>openmldb-nearline-tablet</artifactId>
