--- a/java/pom.xml
+++ b/java/pom.xml
@@ -13,6 +13,7 @@
         <module>openmldb-jdbc</module>
         <module>openmldb-native</module>
         <module>openmldb-common</module>
+        <module>openmldb-nearline-tablet</module>
     </modules>
     <description>OpenMLDB is an open-source database that is designed and optimized to enable data integrity and efficiency for machine learning driven applications. In addition to 10x faster ML application landing experience, OpenMLDB provides unified computing and storage engines to reduce the complexity and cost of development and operation.</description>
     <url>https://github.com/4paradigm/OpenMLDB</url>
