--- a/java/openmldb-jmh/pom.xml
+++ b/java/openmldb-jmh/pom.xml
@@ -46,12 +46,12 @@
         <dependency>
             <groupId>com.4paradigm.openmldb</groupId>
             <artifactId>openmldb-jdbc</artifactId>
-            <version>0.2.3-SNAPSHOT</version>
+            <version>0.2.3</version>
         </dependency>
 		<dependency>
 			<groupId>com.4paradigm.openmldb</groupId>
 			<artifactId>openmldb-native</artifactId>
-			<version>0.2.3-SNAPSHOT</version>
+			<version>0.2.3</version>
 		</dependency>
 		<dependency>
 			<groupId>com.4paradigm.hybridse</groupId>
