--- a/java/openmldb-batchjob/pom.xml
+++ b/java/openmldb-batchjob/pom.xml
@@ -4,10 +4,15 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.4paradigm.openmldb</groupId>
+  <parent>
+      <artifactId>openmldb-parent</artifactId>
+      <groupId>com.4paradigm.openmldb</groupId>
+      <version>0.2.3</version>
+  </parent>
+
   <artifactId>openmldb-batchjob</artifactId>
-  <version>1.0-SNAPSHOT</version>
   <name>openmldb-batchjob</name>
+  <packaging>jar</packaging>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
