--- a/test/integration-test/python-sdk-test/conf/fedb.conf
+++ b/test/integration-test/python-sdk-test/conf/fedb.conf
@@ -8,7 +8,7 @@ levels=0
 #配置zk地址, 和集群启动配置中的zk_cluster保持一致
 qa_zk_cluster=172.24.4.55:10000
 #配置集群的zk根路径, 和集群启动配置中的zk_root_path保持一致
-qa_zk_root_path=/fedb
+qa_zk_root_path=/openmldb
 qa_tb_endpoint_0=172.24.4.55:10003
 qa_tb_endpoint_1=172.24.4.55:10004
 qa_tb_endpoint_2=172.24.4.55:10005
