feat: support aggregation over the whole table

--- a/cases/plan/table_aggregation_query.yaml
+++ b/cases/plan/table_aggregation_query.yaml
@@ -14,18 +14,23 @@
 
 cases:
   - id: 1
-    desc: Trim函数
-    sql: SELECT TRIM(COL1) FROM t1;
+    desc: COUNT函
+    mode: request-unsupport
+    sql: SELECT COUNT(COL1) FROM t1
   - id: 2
-    desc: Trim函数2
-    sql: SELECT trim(COL1) as trim_col1 FROM t1;
+    desc: Sum函数
+    mode: request-unsupport
+    sql: SELECT SUM(COL1) FROM t1;
   - id: 3
     desc: Min函数
+    mode: request-unsupport
     sql: SELECT MIN(COL1) FROM t1;
   - id: 4
     desc: Max函数
+    mode: request-unsupport
     sql: SELECT MAX(COL1) FROM t1;
   - id: 5
-    desc: Sum函数
-    sql: SELECT SUM(COL1) FROM t1;
+    desc: Avg函数
+    mode: request-unsupport
+    sql: SELECT AVG(COL1) FROM t1;
 
