--- a/cases/function/test_fz_sql.yaml
+++ b/cases/function/test_fz_sql.yaml
@@ -64,20 +64,17 @@ cases:
       SELECT id,
         fz_join(fz_split(c1, ","), " ") AS split_and_join,
         fz_join(fz_split_by_key(c1, ",", ":"), " ") AS split_key_and_join,
-        fz_join(fz_split_by_value(c1, ",", ":"), " ") AS split_value_and_join,
-        count(fz_split_by_key(c1, ",", ":")) AS split_key_and_count,
-        distinct_count(fz_split_by_key(c1, ",", ":")) AS split_key_and_distinct_count
+        fz_join(fz_split_by_value(c1, ",", ":"), " ") AS split_value_and_join
       FROM main;
     expect:
       order: id
-      columns: ["id int64", "split_and_join string", "split_key_and_join string", "split_value_and_join string",
-                "split_key_and_count int64", "split_key_and_distinct_count int64"]
+      columns: ["id int64", "split_and_join string", "split_key_and_join string", "split_value_and_join string"]
       rows:
-        - [1, "k1:v1 k2:v2", "k1 k2", "v1 v2", 2, 2]
-        - [2, "k3:v3", "k3", "v3", 1, 1]
-        - [3, "???  k4:v4", "k4", "v4", 1, 1]
-        - [4, "", "", "", 0, 0]
-        - [5, "k5:v5 k3:v3", "k5 k3", "v5 v3", 2, 2]
+        - [1, "k1:v1 k2:v2", "k1 k2", "v1 v2"]
+        - [2, "k3:v3", "k3", "v3"]
+        - [3, "???  k4:v4", "k4", "v4"]
+        - [4, "", "", ""]
+        - [5, "k5:v5 k3:v3", "k5 k3", "v5 v3"]
   - id: 2
     desc: fz case 5 simple version debug
     mode: rtidb-batch-unsupport
