--- a/cases/function/select/test_select_sample.yaml
+++ b/cases/function/select/test_select_sample.yaml
@@ -267,7 +267,7 @@ cases:
         - [1, 1590115420]
   - id: 19
     desc: 全表聚合
-    mode: request-unsupport
+    mode: rtidb-unsupport
     db: db1
     sqlDialect: ["HybridSQL", "MYSQL"]
     sql: |
