--- a/cases/function/expression/test_arithmetic.yaml
+++ b/cases/function/expression/test_arithmetic.yaml
@@ -13,7 +13,7 @@
 # limitations under the License.
 
 db: test_zw
-debugs: ["bitwise not"]
+debugs: []
 sqlDialect: ["HybridSQL"]
 cases:
   - id: 0
