--- a/cases/plan/insert.yaml
+++ b/cases/plan/insert.yaml
@@ -131,3 +131,162 @@ cases:
           |      +-position: 2
           |    +-expr[parameter]
           |      +-position: 3
+
+  - id: 9
+    desc: INSERT multiple rows
+    sql: |
+      insert into t1 values
+      (1, 2L, 3.0f, 4.0, 1590738990000L, "hello", "2021-05-20"),
+      (2, 12L, 13.0f, 14.0, 1590738991000L, "world", "2021-05-21"),
+      (3, 22L, 23.0f, 24.0, 1590738992000L, "today", "2021-05-22");
+    expect:
+      node_tree_str: |
+        +-node[kInsertStmt]
+          +-table_name: t1
+          +-columns: all
+          +-values[list]:
+          |  +-0:
+          |  |  +-expr[primary]
+          |  |    +-value: 1
+          |  |    +-type: int32
+          |  |  +-expr[primary]
+          |  |    +-value: 2
+          |  |    +-type: int64
+          |  |  +-expr[primary]
+          |  |    +-value: 3.000000
+          |  |    +-type: float
+          |  |  +-expr[primary]
+          |  |    +-value: 4.000000
+          |  |    +-type: double
+          |  |  +-expr[primary]
+          |  |    +-value: 1590738990000
+          |  |    +-type: int64
+          |  |  +-expr[primary]
+          |  |    +-value: hello
+          |  |    +-type: string
+          |  |  +-expr[primary]
+          |  |    +-value: 2021-05-20
+          |  |    +-type: string
+          |  +-1:
+          |  |  +-expr[primary]
+          |  |    +-value: 2
+          |  |    +-type: int32
+          |  |  +-expr[primary]
+          |  |    +-value: 12
+          |  |    +-type: int64
+          |  |  +-expr[primary]
+          |  |    +-value: 13.000000
+          |  |    +-type: float
+          |  |  +-expr[primary]
+          |  |    +-value: 14.000000
+          |  |    +-type: double
+          |  |  +-expr[primary]
+          |  |    +-value: 1590738991000
+          |  |    +-type: int64
+          |  |  +-expr[primary]
+          |  |    +-value: world
+          |  |    +-type: string
+          |  |  +-expr[primary]
+          |  |    +-value: 2021-05-21
+          |  |    +-type: string
+          |  +-2:
+          |    +-expr[primary]
+          |      +-value: 3
+          |      +-type: int32
+          |    +-expr[primary]
+          |      +-value: 22
+          |      +-type: int64
+          |    +-expr[primary]
+          |      +-value: 23.000000
+          |      +-type: float
+          |    +-expr[primary]
+          |      +-value: 24.000000
+          |      +-type: double
+          |    +-expr[primary]
+          |      +-value: 1590738992000
+          |      +-type: int64
+          |    +-expr[primary]
+          |      +-value: today
+          |      +-type: string
+          |    +-expr[primary]
+          |      +-value: 2021-05-22
+          |      +-type: string
+  - id: 9
+    desc: INSERT multiple rows with specify column
+    sql: |
+      insert into t1 (col1, col2, col3, col4, col5, col6, col7) values
+      (1, 2L, 3.0f, 4.0, 1590738990000L, "hello", "2021-05-20"),
+      (2, 12L, 13.0f, 14.0, 1590738991000L, "world", "2021-05-21"),
+      (3, 22L, 23.0f, 24.0, 1590738992000L, "today", "2021-05-22");
+    expect:
+      node_tree_str: |
+        +-node[kInsertStmt]
+          +-table_name: t1
+          +-columns: [col1, col2, col3, col4, col5, col6, col7]
+          +-values[list]:
+          |  +-0:
+          |  |  +-expr[primary]
+          |  |    +-value: 1
+          |  |    +-type: int32
+          |  |  +-expr[primary]
+          |  |    +-value: 2
+          |  |    +-type: int64
+          |  |  +-expr[primary]
+          |  |    +-value: 3.000000
+          |  |    +-type: float
+          |  |  +-expr[primary]
+          |  |    +-value: 4.000000
+          |  |    +-type: double
+          |  |  +-expr[primary]
+          |  |    +-value: 1590738990000
+          |  |    +-type: int64
+          |  |  +-expr[primary]
+          |  |    +-value: hello
+          |  |    +-type: string
+          |  |  +-expr[primary]
+          |  |    +-value: 2021-05-20
+          |  |    +-type: string
+          |  +-1:
+          |  |  +-expr[primary]
+          |  |    +-value: 2
+          |  |    +-type: int32
+          |  |  +-expr[primary]
+          |  |    +-value: 12
+          |  |    +-type: int64
+          |  |  +-expr[primary]
+          |  |    +-value: 13.000000
+          |  |    +-type: float
+          |  |  +-expr[primary]
+          |  |    +-value: 14.000000
+          |  |    +-type: double
+          |  |  +-expr[primary]
+          |  |    +-value: 1590738991000
+          |  |    +-type: int64
+          |  |  +-expr[primary]
+          |  |    +-value: world
+          |  |    +-type: string
+          |  |  +-expr[primary]
+          |  |    +-value: 2021-05-21
+          |  |    +-type: string
+          |  +-2:
+          |    +-expr[primary]
+          |      +-value: 3
+          |      +-type: int32
+          |    +-expr[primary]
+          |      +-value: 22
+          |      +-type: int64
+          |    +-expr[primary]
+          |      +-value: 23.000000
+          |      +-type: float
+          |    +-expr[primary]
+          |      +-value: 24.000000
+          |      +-type: double
+          |    +-expr[primary]
+          |      +-value: 1590738992000
+          |      +-type: int64
+          |    +-expr[primary]
+          |      +-value: today
+          |      +-type: string
+          |    +-expr[primary]
+          |      +-value: 2021-05-22
+          |      +-type: string
