--- a/cases/query/simple_query.yaml
+++ b/cases/query/simple_query.yaml
@@ -330,3 +330,140 @@ cases:
       columns: ["col1:bool"]
       rows:
         - [NULL]
+  - id: in_predicate_normal
+    desc: normal in predicate test
+    inputs:
+      - name: t1
+        columns: ["col1:int32", "std_ts:timestamp", "std_date:date"]
+        index: index2:col1
+        rows:
+          - [1, 1590115420001, 2020-05-20]
+    sql: |
+      select d[0] d[1] (1, 10) as col1 from t1;
+    dataProvider:
+      - ["1", "2", "NULL"]
+      - ["IN", "NOT IN"]
+    expect:
+      columns: ["col1:bool"]
+    expectProvider:
+      0:
+        0:
+          rows:
+            - [true]
+        1:
+          rows:
+            - [false]
+      1:
+        0:
+          rows:
+            - [false]
+        1:
+          rows:
+            - [true]
+      2:
+        0:
+          rows:
+            - [NULL]
+        1:
+          rows:
+            - [NULL]
+  - id: in_predicate_v_null_true
+    desc: in_list has NULL but one of the comparison is true, return true
+    inputs:
+      - name: t1
+        columns: ["col1:int32", "std_ts:timestamp", "std_date:date"]
+        index: index2:col1
+        rows:
+          - [1, 1590115420001, 2020-05-20]
+    sql: |
+      select 1 in (1, NULL) as col1 from t1;
+    expect:
+      columns: ["col1:bool"]
+      rows:
+        - [true]
+  - id: in_predicate_v_null_null
+    desc: in predicate in_list has NULL and none of the comparisons is true, return NULL
+    inputs:
+      - name: t1
+        columns: ["col1:int32", "std_ts:timestamp", "std_date:date"]
+        index: index2:col1
+        rows:
+          - [1, 1590115420001, 2020-05-20]
+    sql: |
+      select 1 in (2, NULL) as col1 from t1;
+    expect:
+      columns: ["col1:bool"]
+      rows:
+        - [NULL]
+  - id: in_predicate_null_null_null
+    desc: in use normal equal operator, NULL in (NULL, ..) is NULL
+    inputs:
+      - name: t1
+        columns: ["col1:int32", "std_ts:timestamp", "std_date:date"]
+        index: index2:col1
+        rows:
+          - [1, 1590115420001, 2020-05-20]
+    sql: |
+      select NULL in (1, NULL) as col1 from t1;
+    expect:
+      columns: ["col1:bool"]
+      rows:
+        - [NULL]
+  - id: in_predicate_type_cast_1
+    desc: type conversion, string converted into number
+    inputs:
+      - name: t1
+        columns: ["col1:int32", "std_ts:timestamp", "std_date:date"]
+        index: index2:col1
+        rows:
+          - [1, 1590115420001, 2020-05-20]
+    sql: |
+      select 1 in ('1', '2') as col1 from t1;
+    expect:
+      columns: ["col1:bool"]
+      rows:
+        - [true]
+  - id: in_predicate_type_cast_2
+    desc: type conversion, decimal converted into float/double
+    inputs:
+      - name: t1
+        columns: ["col1:int32", "std_ts:timestamp", "std_date:date"]
+        index: index2:col1
+        rows:
+          - [1, 1590115420001, 2020-05-20]
+    sql: |
+      select 1 in (1.0, 2.0) as col1 from t1;
+    expect:
+      columns: ["col1:bool"]
+      rows:
+        - [true]
+  - id: in_predicate_type_cast_3
+    desc: type conversion, string not converted into float/double
+    tags: ["need-discussion"]
+    inputs:
+      - name: t1
+        columns: ["col1:int32", "std_ts:timestamp", "std_date:date"]
+        index: index2:col1
+        rows:
+          - [1, 1590115420001, 2020-05-20]
+    sql: |
+      select '1' in (1.0, 2.0) as col1 from t1;
+    expect:
+      columns: ["col1:bool"]
+      rows:
+        - [true]
+  - id: in_predicate_type_cast_4
+    desc: in_list should be same type
+    tags: ["need-discussion"]
+    inputs:
+      - name: t1
+        columns: ["col1:int32", "std_ts:timestamp", "std_date:date"]
+        index: index2:col1
+        rows:
+          - [1, 1590115420001, 2020-05-20]
+    sql: |
+      select 1 in (1.0, '2') as col1 from t1;
+    expect:
+      columns: ["col1:bool"]
+      rows:
+        - [true]
