Move openmldb-batch out of submodules

--- a/java/pom.xml
+++ b/java/pom.xml
@@ -14,7 +14,7 @@
         <module>openmldb-native</module>
         <module>openmldb-common</module>
         <module>openmldb-nearline-tablet</module>
-        <module>openmldb-batch</module>
+        <!-- <module>openmldb-batch</module> -->
         <module>openmldb-batchjob</module>
         <module>openmldb-taskmanager</module>
     </modules>
